--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "server": "json-server --watch database.json --port 3100"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
